@@ -102,7 +102,8 @@ Zope Changes
 
     Bugs Fixed
 
-<<<<<<< .working
+      - The REQUEST no longer accepts holds after it has been closed.
+
       - Five.browser.metaconfigure.page didn't protect names from interface
         superclasses (http://www.zope.org/Collectors/Zope/2333)
 
